# Queue

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  README.md  clang.sh  main.cpp  sonar-project.properties
.github/workflows/: build-backend.yml  build-frontend.yml  build-server-container.yml  build-server.yml  build.yml
backend/: .env.ci
backend/database/seeders/: DatabaseSeeder.php
docker/: shared.dockerfile  static.dockerfile
frontend/: README.md  nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/components/: notifications.vue  wrapper.vue
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue  login.vue
frontend/app/stores/: auth.ts  notifications.ts
frontend/app/utils/: api.ts
scripts/: build.sh  check-format.sh
src/include/engine/: auth.hpp  chrono.hpp  cipher.hpp  controller.hpp  controller_config.hpp  encoding.hpp  job.hpp  job_cancelled.hpp  jwt.hpp  kernel.hpp  listener.hpp  metrics.hpp  queue.hpp  route.hpp  router.hpp  server.hpp  session.hpp  signal_handler.hpp  state.hpp  string_hasher.hpp  support.hpp  task.hpp  task_group.hpp  types.hpp  validator.hpp  version.hpp  worker.hpp
src/include/engine/controllers/: metrics_controller.hpp  status_controller.hpp  user_controller.hpp
src/include/engine/controllers/auth/: attempt_controller.hpp
src/include/engine/controllers/queues/: dispatch_controller.hpp  index_controller.hpp  jobs_controller.hpp  tasks_controller.hpp  workers_controller.hpp
src/include/engine/errors/: cancel_error.hpp  cipher_error.hpp  job_cancelled.hpp  not_found_error.hpp  parse_error.hpp  session_error.hpp  signature_error.hpp  task_not_found.hpp
src/include/queue/: job.hpp  queue.hpp  state.hpp  version.hpp
src/objects/engine/: auth.cpp  chrono.cpp  cipher.cpp  controller.cpp  job.cpp  jwt.cpp  kernel.cpp  listener.cpp  queue.cpp  route.cpp  router.cpp  server.cpp  session.cpp  state.cpp  task.cpp  validator.cpp  version.cpp  worker.cpp
src/objects/engine/controllers/: status_controller.cpp  user_controller.cpp
src/objects/engine/controllers/auth/: attempt_controller.cpp
src/objects/engine/controllers/queues/: dispatch_controller.cpp  index_controller.cpp  jobs_controller.cpp  tasks_controller.cpp  workers_controller.cpp
src/objects/queue/: job.cpp  queue.cpp  state.cpp  version.cpp
tests/: state.cc  test_cipher.cc  test_encoding_base64.cc  test_encoding_base64url.cc  test_job.cc  test_jwt.cc  test_queue.cc  test_route.cc  test_router.cc  test_server.cc  test_state.cc  test_validator.cc  test_version.cc  test_worker.cc  version.cc
